<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SunPower</string>

    <!-- ~~~~~~~~~~~ LOGIN SCREEN ~~~~~~~~~~~ -->
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="login_screen_err_text">Login / Mot de passe erroné</string>
    <string name="login_screen_connect_text">CONNEXION</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <!-- ~~~~~~~~~~~~~~~~~~~~~~~ HOME SCREEN ~~~~~~~~~~~~~~~~~~~~~~ -->
    <string name="home_screen_my_table_text">Mon tableau de bord</string>
    <string name="home_screen_presentation_text">Presentation de l`offre</string>
    <string name="home_screen_eligibility_text">Éligibilite &amp; rendement</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~ Lead ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    <string name="welcome">Bonjour</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <!-- ~~~~~~~~~~~ ACTION BAR ~~~~~~~~~~~~ -->
    <string name="action_bar_home_text">HOME</string>
    <string name="action_bar_argumentarie_text">FAIRE DÉCOUVRIR</string>
    <string name="action_bar_checklist_text">REVENU SOLAIRE</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <!-- ~~~~~~~~~~~ CHECK_LIST ~~~~~~~~~~~~ -->
    <!-- Etap0 -->
    <string name="lead_change">LEAD CHANGE</string>
    <string name="new_lead">NEW LEAD</string>
    <string name="start_checklist">START CHECKLIST</string>
    <!-- Etap1 -->
    <string name="environment">L\u0027ENVIRONNEMENT</string>
    <string name="environment_more">Environnement plus particulièrement décrit comme :</string>
    <string name="coastal_zone">Zone côtière</string>
    <string name="urban">Urbain</string>
    <string name="suburbs">Banlieue</string>
    <string name="open_space">Espace dégagé</string>
    <string name="open_terrain">Terrain dégagé avec \n\r obstacles ponctuels</string>
    <!-- Etap2  -->
    <string name="distance_to_sea">Distance par rapport à la mer:</string>
    <string name="less_than_3km">Moins de 3km</string>
    <string name="between_3km_and_10km">Entre 3km et 10km</string>
    <string name="more_than_10km">Plus de 10km</string>

    <!-- Etap3 -->
    <string name="fragment_check_list_etap3_banner_text">L\'ENVIRONNEMENT</string>
    <string name="fragment_check_list_etap3_subtitle_text">ETAPE #3</string>
    <string name="fragment_check_list_etap3_question1_text">Le site est-il en zone classée ABF ?</string>
    <string name="fragment_check_list_etap3_question2_text">Y a-t-il des arbres gênants ?</string>
    <string name="fragment_check_list_etap3_question3_text">Si oui, est-ce que le propriétaire peut les couper ou élaguer ?</string>
    <string name="fragment_check_list_etap3_question_var1">OUI</string>
    <string name="fragment_check_list_etap3_question_var2">NON</string>
    <string name="fragment_check_list_etap3_popup_text">LEAD NON ELIGIBLE</string>

    <!-- Etap4 -->
    <string name="fragment_check_list_etap4_banner_text">VOTRE MAISON</string>
    <string name="fragment_check_list_etap4_subtitle_text">ETAPE #4</string>
    <string name="fragment_check_list_etap4_question1_text">Simple toit ?</string>
    <string name="fragment_check_list_etap4_question2_text">Azimut ?</string>
    <string name="fragment_check_list_etap4_question3_text">Orienté nord-est / nord / nord-ouest ?</string>
    <string name="fragment_check_list_etap4_question4_text">Simple pente ?</string>
    <string name="fragment_check_list_etap4_question5_text">Pente de toit supérieure à 45° ?</string>
    <string name="fragment_check_list_etap4_question6_text">Pente de toit inférieure à 10° ?</string>
    <string name="fragment_check_list_etap4_answer1_text">OUI</string>
    <string name="fragment_check_list_etap4_answer2_text">NON</string>

    <!-- Etap5 -->
    <string name="fragment_check_list_etap5_banner_text">VOTRE MAISON</string>
    <string name="fragment_check_list_etap5_subtitle_text">ETAPE #5</string>
    <string name="fragment_check_list_etap5_question1_text">Toit complet en zone ombragée plus de 4 heures par jour ?</string>
    <string name="fragment_check_list_etap5_question2_text">Surface du toit exposé au soleil inférieure à 34m2 ?</string>
    <string name="fragment_check_list_etap5_question_var1">OUI</string>
    <string name="fragment_check_list_etap5_question_var2">NON</string>

    <!-- Etap6 -->
    <string name="fragment_check_list_etap6_banner_text">VOTRE MAISON</string>
    <string name="fragment_check_list_etap6_subtitle_text">ETAPE #6</string>
    <string name="fragment_check_list_etap6_question1_text">Toiture en microciment ou autre que tuile non entièrement démontable ?</string>
    <string name="fragment_check_list_etap6_question2_text">Présence d’amiante dans la charpente ?</string>
    <string name="fragment_check_list_etap6_question3_text">Charpente en béton ou métallique ?</string>
    <string name="fragment_check_list_etap6_question4_text">Année de construction de la charpente ?</string>
    <string name="fragment_check_list_etap6_answer1_text">OUI</string>
    <string name="fragment_check_list_etap6_answer2_text">NON</string>

    <string-array name="fragment_checklist_etap6_answer3_array">
        <item>1980</item>
    </string-array>

    <!-- Etap7 -->
    <string name="fragment_check_list_etap7_banner_text">VOUS</string>
    <string name="fragment_check_list_etap7_question1_text">Nom</string>
    <string name="fragment_check_list_etap7_question2_text">Prénom</string>
    <string name="fragment_check_list_etap7_question3_text">Adresse</string>
    <string name="fragment_check_list_etap7_question4_text">Code postal</string>
    <string name="fragment_check_list_etap7_question5_text">Ville</string>
    <string name="fragment_check_list_etap7_question6_text">Propriétaire de la maison ?</string>
    <string name="fragment_check_list_etap7_question7_text">Tel fixe</string>
    <string name="fragment_check_list_etap7_question8_text">Tel portable</string>
    <string name="fragment_check_list_etap7_question9_text">Tel bureau</string>
    <string name="fragment_check_list_etap7_question10_text">Email</string>
    <string name="fragment_check_list_etap7_question11_text">Résidence principale ?</string>
    <string name="fragment_check_list_etap7_answer1_text">OUI</string>
    <string name="fragment_check_list_etap7_answer2_text">NON</string>

    <!-- Etap8 -->
    <string name="fragment_check_list_etap8_banner_text">VOUS</string>
    <string name="fragment_check_list_etap8_question1_text">Type de courant de consommation ?</string>
    <string name="fragment_check_list_etap8_question2_text">Estimation de la consommation électrique annuelle en kWH :</string>
    <string name="fragment_check_list_etap8_question3_text">Estimation de la facture d’électricité annuelle en EUR :</string>
    <string name="fragment_check_list_etap8_answer1_text">Monophasé</string>
    <string name="fragment_check_list_etap8_answer2_text">Triphasé</string>
    <string name="fragment_check_list_etap8_answer3_text">3644 kWH / an</string>
    <string name="fragment_check_list_etap8_answer4_text">700€ / an</string>

    <!-- Etap9 -->
    <string name="fragment_check_list_etap9_banner_text">VOTRE REVENU</string>
    <string name="fragment_check_list_etap9_question1_text">Votre adresse</string>
    <string name="fragment_check_list_etap9_question2_text">Propriétaire de la maison ?</string>
    <string name="fragment_check_list_etap9_question3_text">Résidence principale ?</string>
    <string name="fragment_check_list_etap9_answer1_text">OUI</string>
    <string name="fragment_check_list_etap9_answer2_text">NON</string>

    <!-- Etap10 -->
    <string name="orientation">Orientation</string>
    <string name="du_toit">du toit</string>
    <string-array name="cardinal">
        <item>S</item>
        <item>SE</item>
        <item>E</item>
        <item>NE</item>
        <item>N</item>
        <item>NO</item>
        <item>O</item>
        <item>SO</item>
    </string-array>

    <!-- Etap11 -->
    <string name="your_floor_living_area">Your floor living area</string>
    <string name="value_of_40m"> - of 40m<sup>2</sup> </string>
    <string name="value_40_60m">  40-60m<sup>2</sup> </string>
    <string name="value_60_80m">  60-80m<sup>2</sup> </string>
    <string name="value_of_80m"> + of 80m<sup>2</sup> </string>

    <!-- Etap12  -->
    <string name="your_income">YOUR INCOME</string>
    <string name="estimated_annual_income">Estimated annual income with solar supply Solarprime</string>
    <string name="estimated_annual_production">Estimated annual production</string>
    <string name="the_area_of_my_roof">The area of ​​my roof:</string>
    <string name="your_address">Your address: </string>
    <string name="the_orientation_of_my_roof">The orientation of my roof:</string>

    <!-- Etap13 -->
    <string name="fragment_check_list_etap13_banner_text">INFORMATIONS SUPP.</string>
    <string name="fragment_check_list_etap13_subtitle_text">ETAPE #13</string>
    <string name="fragment_check_list_etap13_question1_text">Position du local technique (recevant les onduleurs) :</string>
    <string name="fragment_check_list_etap13_question2_text">Photo de la maison dans son environnement lointain (toute la rue) :</string>
    <string name="fragment_check_list_etap13_question3_text">Photo de la maison dans son environnement proche (client + voisins) :</string>
    <string name="fragment_check_list_etap13_question4_text">Vue du compteur EDF plombé dans son environnement :</string>
    <string name="fragment_check_list_etap13_question5_text">Vue du compteur plombé en détail :</string>

    <!-- Etap14 -->
    <string name="fragment_check_list_etap14_banner_text">INFORMATIONS SUPP.</string>
    <string name="fragment_check_list_etap14_subtitle_text">ETAPE #14</string>
    <string name="fragment_check_list_etap14_question1_text">- Logette EDF dans son environnement (+poteau)</string>
    <string name="fragment_check_list_etap14_question2_text">- Logette EDF ouverte</string>
    <string name="fragment_check_list_etap14_question3_text">- Mandat administratif</string>
    <string name="fragment_check_list_etap14_question4_text">- Copie d’une facture EDF ou autre fournisseur (N°PDL)</string>

    <!-- Etap15 -->
    <string name="fragment_check_list_etap15_banner_text">DOSSIER COMPLET!</string>
    <string name="fragment_check_list_etap15_button1_text">Informations supplémentaires</string>
    <string name="fragment_check_list_etap15_button2_text">Envoyer brochure par email</string>
    <string name="fragment_check_list_etap15_button3_text">SYNCHRONISER \n dernière synchro le 20/01/2014</string>

    <!-- Etap16 -->
    <string name="fragment_check_list_etap16_banner_text">Le dossier de Mr.Dupont est rempli à 100%</string>
    <string name="fragment_check_list_etap16_button1_text">> INFOS COMPLÉMENTAIRES</string>
    <string name="fragment_check_list_etap16_button2_text">ENVOYER BROCHURE PAR EMAIL</string>
    <string name="fragment_check_list_etap16_button3_text">SYNCHRONISER \n dernière synchro le 20/01/2014</string>

</resources>
