<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_screen_checklist">

    <TextView
        android:id="@+id/tvCheckListEtap7Banner"
        style="@style/CheckListEtapBanner"
        android:text="@string/fragment_check_list_etap7_banner_text"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/tvCheckListEtap7Banner">

        <LinearLayout
            style="@style/CheckListTestsContainer"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etChecklistEtap7Question1"
                android:hint="@string/fragment_check_list_etap7_question1_text"
                style="@style/CheckListET" />

            <EditText
                android:id="@+id/etChecklistEtap7Question2"
                android:hint="@string/fragment_check_list_etap7_question2_text"
                style="@style/CheckListET"/>

            <EditText
                android:id="@+id/etChecklistEtap7Question3"
                android:hint="@string/fragment_check_list_etap7_question3_text"
                style="@style/CheckListET"/>

            <EditText
                android:id="@+id/etChecklistEtap7Question4"
                android:hint="@string/fragment_check_list_etap7_question4_text"
                style="@style/CheckListET"/>

            <EditText
                android:id="@+id/etChecklistEtap7Question5"
                android:hint="@string/fragment_check_list_etap7_question5_text"
                style="@style/CheckListET"/>

            <TextView
                android:id="@+id/tvCheckListEtap7Text1"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap7_question6_text"/>

            <RadioGroup
                android:id="@+id/tvCheckListEtap7RadioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnEtap7Question6Var1"
                    style="@style/CheckListLeftAnswerRB"
                    android:checked="true"
                    android:text="@string/fragment_check_list_etap7_answer1_text" />

                <RadioButton
                    android:id="@+id/rbtnEtap7Question6Var2"
                    style="@style/CheckListRightAnswerRB"
                    android:text="@string/fragment_check_list_etap7_answer2_text" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/CheckListTestsContainer"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etChecklistEtap7Question7"
                android:hint="@string/fragment_check_list_etap7_question7_text"
                style="@style/CheckListET" />

            <EditText
                android:id="@+id/etChecklistEtap7Question8"
                android:hint="@string/fragment_check_list_etap7_question8_text"
                style="@style/CheckListET"/>

            <EditText
                android:id="@+id/etChecklistEtap7Question9"
                android:hint="@string/fragment_check_list_etap7_question9_text"
                style="@style/CheckListET"/>

            <EditText
                android:id="@+id/etChecklistEtap7Question10"
                android:hint="@string/fragment_check_list_etap7_question10_text"
                style="@style/CheckListET"/>

            <TextView
                android:id="@+id/tvCheckListEtap7Text11"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap7_question11_text"/>

            <RadioGroup
                android:id="@+id/tvCheckListEtap7RadioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnEtap7Question11Var1"
                    style="@style/CheckListLeftAnswerRB"
                    android:checked="true"
                    android:text="@string/fragment_check_list_etap7_answer1_text" />

                <RadioButton
                    android:id="@+id/rbtnEtap7Question11Var2"
                    style="@style/CheckListRightAnswerRB"
                    android:text="@string/fragment_check_list_etap7_answer2_text" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>