<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_screen_checklist">

    <TextView
        android:id="@+id/tvCheckListEtap8Banner"
        style="@style/CheckListEtapBanner"
        android:text="@string/fragment_check_list_etap8_banner_text"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/tvCheckListEtap8Banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCheckListEtap8Text1"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap8_question1_text"/>

            <RadioGroup
                android:id="@+id/tvCheckListEtap8RadioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnEtap8Question1Var1"
                    style="@style/CheckListLeftAnswerRB"
                    android:checked="true"
                    android:text="@string/fragment_check_list_etap8_answer1_text" />

                <RadioButton
                    android:id="@+id/rbtnEtap8Question1Var2"
                    style="@style/CheckListRightAnswerRB"
                    android:text="@string/fragment_check_list_etap8_answer2_text" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvCheckListEtap8Text1"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap8_question2_text"/>

            <TextView
                android:id="@+id/tvCheckListEtap8Text1"
                style="@style/CheckListSubAnswer"
                android:text="@string/fragment_check_list_etap8_answer3_text"/>

            <TextView
                android:id="@+id/tvCheckListEtap8Text1"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap8_question3_text"/>

            <TextView
                android:id="@+id/tvCheckListEtap8Text1"
                style="@style/CheckListSubAnswer"
                android:text="@string/fragment_check_list_etap8_answer4_text"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>