<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_screen_checklist"
        >
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvCheckListEtap1Banner"
              android:text="@string/environment"
              android:textSize="@dimen/ts_checklist_banner"
              android:textColor="@color/bg_screen_login"
              android:gravity="center"
              android:layout_above="@+id/tvCheckListEtap1subtitle"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvCheckListEtap1subtitle"
              android:text="@string/environment_more"
              android:textSize="@dimen/text_size_subtitle"
              android:textColor="@color/bg_screen_login"
              android:gravity="center"
              android:layout_above="@+id/ll"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/ll"
            android:orientation="horizontal">
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rg"
                android:layout_weight="1"
                android:orientation="vertical">
            <RadioButton android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/CheckListLeftAnswerRB"
                         android:lines="1"
                         android:id="@+id/radio_btn_coastal_zone"
                         android:text="@string/coastal_zone"/>
            <RadioButton android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/radio_btn_urban"
                         style="@style/CheckListLeftAnswerRB"
                         android:text="@string/urban"/>
            <RadioButton android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/suburbs"
                         style="@style/CheckListLeftAnswerRB"
                         android:id="@+id/radio_btn_suburbs"/>
        </RadioGroup>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_group_right"
                android:orientation="vertical">
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/radio_btn_environment_more"
                         style="@style/CheckListRightAnswerRB"
                         android:text="@string/open_space"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/CheckListRightAnswerRB"
                         android:lines="2"
                         android:id="@+id/radio_btn_environment"
                         android:text="@string/open_terrain"/>

        </RadioGroup>
    </LinearLayout>

</RelativeLayout>