<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/tvBanner_FCL9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CheckListEtapBanner"
        android:text="@string/fragment_check_list_etap9_banner_text"
        android:gravity="center" />

    <EditText
        android:id="@+id/etEmailAddress_FCL9"
        android:layout_width="@dimen/w_checklist_question"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_check_list_etap9_question1_text"
        style="@style/CheckListET"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvBanner_FCL9"/>

    <TextView
        android:id="@+id/tvOwner_FCL9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CheckListQuestion"
        android:text="@string/fragment_check_list_etap9_question2_text"
        android:layout_below="@+id/etEmailAddress_FCL9"
        android:gravity="center" />

    <RadioGroup
        android:id="@+id/rgOwner_FCL9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvOwner_FCL9"
        android:gravity="center" >

        <RadioButton
            android:id="@+id/rbtnOwnerVar1_FCL9"
            style="@style/CheckListLeftAnswerRB"
            android:checked="true"
            android:text="@string/fragment_check_list_etap9_answer1_text" />

        <RadioButton
            android:id="@+id/rbtnOwnerVar2_FCL9"
            style="@style/CheckListRightAnswerRB"
            android:text="@string/fragment_check_list_etap9_answer2_text" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvPrimaryResidence_FCL9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CheckListQuestion"
        android:text="@string/fragment_check_list_etap9_question3_text"
        android:layout_below="@+id/rgOwner_FCL9"
        android:gravity="center" />

    <RadioGroup
        android:id="@+id/rgPrimaryResidence_FCL9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvPrimaryResidence_FCL9"
        android:gravity="center" >

        <RadioButton
            android:id="@+id/rbtnPrimaryResidenceVar1_FCL9"
            style="@style/CheckListLeftAnswerRB"
            android:checked="true"
            android:text="@string/fragment_check_list_etap9_answer1_text" />

        <RadioButton
            android:id="@+id/rbtnPrimaryResidenceVar2_FCL9"
            style="@style/CheckListRightAnswerRB"
            android:text="@string/fragment_check_list_etap9_answer2_text" />

    </RadioGroup>

</RelativeLayout>