<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_screen_checklist">

    <TextView
        android:id="@+id/tvCheckListEtap6Banner"
        style="@style/CheckListEtapBanner"
        android:text="@string/fragment_check_list_etap6_banner_text"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/tvCheckListEtap6Banner">

        <LinearLayout
            style="@style/CheckListTestsContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCheckListEtap6Text1"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap6_question1_text"/>

            <RadioGroup
                android:id="@+id/tvCheckListEtap6RadioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnEtap6Question1Var1"
                    style="@style/CheckListLeftAnswerRB"
                    android:checked="true"
                    android:text="@string/fragment_check_list_etap6_answer1_text" />

                <RadioButton
                    android:id="@+id/rbtnEtap6Question1Var2"
                    style="@style/CheckListRightAnswerRB"
                    android:text="@string/fragment_check_list_etap6_answer2_text" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvCheckListEtap6Text2"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap6_question2_text" />

            <RadioGroup
                android:id="@+id/tvCheckListEtap6RadioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnEtap6Question2Var1"
                    style="@style/CheckListLeftAnswerRB"
                    android:checked="true"
                    android:text="@string/fragment_check_list_etap6_answer1_text" />

                <RadioButton
                    android:id="@+id/rbtnEtap6Question2Var2"
                    style="@style/CheckListRightAnswerRB"
                    android:text="@string/fragment_check_list_etap6_answer2_text"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/CheckListTestsContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCheckListEtap6Text3"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap6_question3_text" />

            <RadioGroup
                android:id="@+id/tvCheckListEtap6RadioGroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnEtap6Question3Var1"
                    style="@style/CheckListLeftAnswerRB"
                    android:checked="true"
                    android:text="@string/fragment_check_list_etap6_answer1_text" />

                <RadioButton
                    android:id="@+id/rbtnEtap6Question3Var2"
                    style="@style/CheckListRightAnswerRB"
                    android:text="@string/fragment_check_list_etap6_answer2_text"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tvCheckListEtap6Text4"
                style="@style/CheckListQuestion"
                android:text="@string/fragment_check_list_etap6_question4_text" />

            <Spinner
                android:id="@+id/sEtap6Answer3"
                style="@style/CheckListSpinner"
                android:entries="@array/fragment_checklist_etap6_answer3_array"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>